fix contribute page anchor position shifted

--- a/docs/static_site/src/_sass/minima/_layout.scss
+++ b/docs/static_site/src/_sass/minima/_layout.scss
@@ -364,3 +364,18 @@
     color: $grey-color-light;
   }
 }
+
+#forum::before,
+#mxnet-dev-communications::before,
+#social-media::before,
+#jira::before,
+#confluence-wiki::before,
+#setup-mxnet-for-development::before,
+#your-first-contribution::before {
+  display: block;
+  content: " ";
+  margin-top: -86px;
+  height: 86px;
+  visibility: hidden;
+  pointer-events: none;
+}
